--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import "tailwindcss";
+
+body {
+  overflow: hidden;
+}
+
+svg {
+  width: 100vw;
+  height: 100vh;
+}
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
